--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,3 +30,6 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 # Debugging (optional)
 spring.mail.properties.mail.debug=true
+
+
+jwt.secret=gbfvdcsert654356vcxzbvcxz
